// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accept html tags 1`] = `
<div
  className="notification-bar ms-Grid-col ms-u-sm12 ms-u-md6 ms-u-mdPush3"
>
  <ul>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={1}
        onDismiss={null}
      >
        <span>
          an error
        </span>
      </MessageBar>
    </li>
  </ul>
</div>
`;

exports[`breaks lines 1`] = `
<div
  className="notification-bar ms-Grid-col ms-u-sm12 ms-u-md6 ms-u-mdPush3"
>
  <ul>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={1}
        onDismiss={null}
      >
        <span>
          an
          <br />
        </span>
        <span>
          error
          <br />
        </span>
      </MessageBar>
    </li>
  </ul>
</div>
`;

exports[`displays notifications 1`] = `
<div
  className="notification-bar ms-Grid-col ms-u-sm12 ms-u-md6 ms-u-mdPush3"
>
  <ul>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={1}
        onDismiss={null}
      >
        <span>
          an error
          <br />
        </span>
      </MessageBar>
    </li>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={4}
        onDismiss={null}
      >
        <span>
          a success
          <br />
        </span>
      </MessageBar>
    </li>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={5}
        onDismiss={null}
      >
        <span>
          a warning
          <br />
        </span>
      </MessageBar>
    </li>
    <li
      className="ms-u-fadeIn100"
    >
      <MessageBar
        isMultiline={true}
        messageBarType={0}
        onDismiss={null}
      >
        <span>
          an info
          <br />
        </span>
      </MessageBar>
    </li>
  </ul>
</div>
`;

exports[`renders empty 1`] = `
<div
  className="notification-bar ms-Grid-col ms-u-sm12 ms-u-md6 ms-u-mdPush3"
>
  <ul />
</div>
`;
